# GainKnob

./: CLAUDE.md  CMakeLists.txt  StepByStep.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
